--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg bg-white shadow py-3 sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="" alt="">
+                <img src="images/logo.png" alt="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,6 +44,7 @@
                     </li>
 
                 </ul>
+                
                 <a href="#" class="btn btn-brand">Order Online</a>
             </div>
         </div>
