--- a/menu.html
+++ b/menu.html
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="">Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Features</a>
+                        <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
 
                 </ul>
