--- a/contact.html
+++ b/contact.html
@@ -21,14 +21,14 @@
     <nav class="navbar navbar-expand-lg bg-white shadow py-3 sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="images/logo.png" alt="logo">
+                <img src="images/logo.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mx-auto">
+                <ul class="navbar-nav pull-right">
 
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
@@ -40,12 +40,12 @@
                         <a class="nav-link" href="menu.html">Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Contact Us</a>
+                        <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
-
                 </ul>
-                
-                <a href="#" class="btn btn-brand">Order Online</a>
+                <form class="d-flex ms-auto order-5">
+                    <a href="#" class="btn btn-brand">Order Online</a>
+                </form>    
             </div>
         </div>
     </nav>
