--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 <body data-bs-spy="scroll" data-bs-target=".navbar">
 
     <!-- Navbar -->
-    
-	<nav class="navbar navbar-expand-lg bg-white shadow py-3 sticky-top">
+    <nav class="navbar navbar-expand-lg bg-white shadow py-3 sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="">
@@ -59,7 +58,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-8">
                             <h6 class="text-white">Welcome To Maharaja's Meal</h6>
-                            <h1 class="display-1 my-3 fw-bold text-white">Smh1</h1>
+                            <h1 class="display-1 my-3 fw-bold text-white">Where we serve the best food.</h1>
                             <a href="#" class="btn btn-brand">Reservation</a>
                         </div>
                     </div>
@@ -70,8 +69,8 @@
                 <div class="container h-100 d-flex align-items-center justify-content-center">
                     <div class="row justify-content-center">
                         <div class="col-lg-8">
-                            <h6 class="text-white">Welcome To Maharaja's Meal</h6>
-                            <h1 class="display-1 my-3 fw-bold text-white">Smh2</h1>
+                            <h6 class="text-white">Fresh And Seasoned</h6>
+                            <h1 class="display-1 my-3 fw-bold text-white">Excellent Seasoning and fresh food</h1>
                             <a href="#" class="btn btn-brand">Reservation</a>
                         </div>
                     </div>
@@ -82,8 +81,8 @@
                 <div class="container h-100 d-flex align-items-center justify-content-center">
                     <div class="row justify-content-center">
                         <div class="col-lg-8">
-                            <h6 class="text-white">Welcome To Maharaja's Meal</h6>
-                            <h1 class="display-1 my-3 fw-bold text-white">Smh3</h1>
+                            <h6 class="text-white">Full Time Service</h6>
+                            <h1 class="display-1 my-3 fw-bold text-white">Full service at all time.</h1>
                             <a href="#" class="btn btn-brand">Reservation</a>
                         </div>
                     </div>
