--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Remix Icons -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <!-- Style Css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg bg-white shadow py-3 sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="images/logo.png" alt="">
+                <img src="logo.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -105,7 +105,7 @@
         <div class="container">
             <div class="row gy-4 align-items-center">
                 <div class="col-lg-5">
-                    <img src="images/imag_1.jpg" alt="">
+                    <img src="imag_1.jpg" alt="">
                 </div>
                 <div class="col-lg-5">
                     <h1>About us</h1>
@@ -189,7 +189,7 @@
             <div class="row gy-4">
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="./assets/images/team_01.png" alt="">
+                        <img src="team_01.png" alt="">
                         <div class="team-member-content">
                             <h4 class="mb-0 mt-4">Swan Htet Aung</h4>
                             <p class="mb-0">Main Chef</p>
@@ -198,7 +198,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="./assets/images/team_02.png" alt="">
+                        <img src="" alt="">
                         <div class="team-member-content">
                             <h4 class="mb-0 mt-4">Nyein Thant Htike</h4>
                             <p class="mb-0">Main Chef</p>
@@ -207,7 +207,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="./assets/images/team_03.png" alt="">
+                        <img src="" alt="">
                         <div class="team-member-content">
                             <h4 class="mb-0 mt-4">Min Thaw Khant</h4>
                             <p class="mb-0">Main Chef</p>
@@ -216,7 +216,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="./assets/images/team_03.png" alt="">
+                        <img src="" alt="">
                         <div class="team-member-content">
                             <h4 class="mb-0 mt-4">Min Thaw Khant</h4>
                             <p class="mb-0">Main Chef</p>
@@ -225,7 +225,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="./assets/images/team_03.png" alt="">
+                        <img src="" alt="">
                         <div class="team-member-content">
                             <h4 class="mb-0 mt-4">Min Thaw Khant</h4>
                             <p class="mb-0">Main Chef</p>
@@ -234,7 +234,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="./assets/images/team_03.png" alt="">
+                        <img src="" alt="">
                         <div class="team-member-content">
                             <h4 class="mb-0 mt-4">Min Thaw Khant</h4>
                             <p class="mb-0">Main Chef</p>
@@ -243,7 +243,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="./assets/images/team_03.png" alt="">
+                        <img src="" alt="">
                         <div class="team-member-content">
                             <h4 class="mb-0 mt-4">Min Thaw Khant</h4>
                             <p class="mb-0">Main Chef</p>
@@ -252,7 +252,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="./assets/images/team_03.png" alt="">
+                        <img src="" alt="">
                         <div class="team-member-content">
                             <h4 class="mb-0 mt-4">Min Thaw Khant</h4>
                             <p class="mb-0">Main Chef</p>
