--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg bg-white shadow py-3 sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="images/logo.png" alt="">
+                <img src="logo.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
