--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Remix Icons -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <!-- Style Css -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg bg-white shadow py-3 sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="logo.png" alt="">
+                <img src="images/logo.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,7 +70,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-8">
                             <h6 class="text-white">Fresh And Seasoned</h6>
-                            <h1 class="display-1 my-3 fw-bold text-white">Excellent Seasoning and fresh food</h1>
+                            <h1 class="display-1 my-3 fw-bold text-white">Excellent Seasoning and fresh ingredients</h1>
                             <a href="#" class="btn btn-brand">Reservation</a>
                         </div>
                     </div>
@@ -105,15 +105,13 @@
         <div class="container">
             <div class="row gy-4 align-items-center">
                 <div class="col-lg-5">
-                    <img src="imag_1.jpg" alt="">
+                    <img src="images/imag_1.jpg" alt="">
                 </div>
                 <div class="col-lg-5">
                     <h1>About us</h1>
                     <div class="divider my-4"></div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo nesciunt voluptates doloribus
-                        quidem. Dignissimos, asperiores molestias?</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur adipisci velit corporis
-                        debitis blanditiis hic, ipsam magni exercitationem ullam quibusdam a ad!</p>
+                    <p>A small indian restaurant opened by 3 individual. Each helps to open the restuarent.</p>
+                    <p>We only sell top quality food with fresh ingredients and the recipe handcrafted by our amazing chef.</p>
                     <a href="menu.html" class="btn btn-brand">Explore Menu</a>
                 </div>
             </div>
@@ -126,9 +124,7 @@
             <div class="row">
                 <div class="col-12 intro-text">
                     <h1 class="text-white">Why to choose us?</h1>
-                    <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae sint
-                        temporibus natus optio
-                        eveniet nobis accusantium?</p>
+                    <p class="text-white">With high rating and incredible food along with the features down below, our restaurent is the best in the city.</p>
                 </div>
             </div>
             <div class="row gy-4">
@@ -138,7 +134,7 @@
                             <i class="ri-wifi-fill"></i>
                         </div>
                         <h4 class="text-white mt-4 mb-2">Free Wifi</h4>
-                        <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, similique
+                        <p class="text-white">Customers can enjoy their food with free wifi, they can access the feee wifi via ordering any amount of food.
                         </p>
                     </div>
                 </div>
@@ -148,7 +144,7 @@
                             <i class="ri-timer-2-fill"></i>
                         </div>
                         <h4 class="text-white mt-4 mb-2">Fast Delivery</h4>
-                        <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, similique
+                        <p class="text-white">Our food delivery is fast and effecitnt. The delivery time is no more than 40 mintues, anywhere in the city.
                         </p>
                     </div>
                 </div>
@@ -158,7 +154,7 @@
                             <i class="ri-user-5-fill"></i>
                         </div>
                         <h4 class="text-white mt-4 mb-2">Friendly Staff</h4>
-                        <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, similique
+                        <p class="text-white">Our staff treats customers and others as they are a part of their family, everyone need love don't they?
                         </p>
                     </div>
                 </div>
@@ -168,7 +164,7 @@
                             <i class="ri-shield-star-fill"></i>
                         </div>
                         <h4 class="text-white mt-4 mb-2">Highly Rated</h4>
-                        <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, similique
+                        <p class="text-white">One of the highest rated restaurant in the city.
                         </p>
                     </div>
                 </div>
@@ -182,83 +178,47 @@
             <div class="row">
                 <div class="col-12 intro-text">
                     <h1>Our Master Chefs</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae sint temporibus natus optio
-                        eveniet nobis accusantium?</p>
+                    <p>With their own handcrafted recipe and amazing cooking skills, they are one of the top chefs in the city.</p>
                 </div>
             </div>
             <div class="row gy-4">
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="team_01.png" alt="">
+                        <img src="images/team_01.png" alt="">
                         <div class="team-member-content">
-                            <h4 class="mb-0 mt-4">Swan Htet Aung</h4>
+                            <h4 class="mb-0 mt-4">John</h4>
                             <p class="mb-0">Main Chef</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="" alt="">
+                        <img src="images/team_02.png" alt="">
                         <div class="team-member-content">
-                            <h4 class="mb-0 mt-4">Nyein Thant Htike</h4>
+                            <h4 class="mb-0 mt-4">Swan</h4>
                             <p class="mb-0">Main Chef</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="" alt="">
+                        <img src="./assets/images/team_03.png" alt="">
                         <div class="team-member-content">
-                            <h4 class="mb-0 mt-4">Min Thaw Khant</h4>
+                            <h4 class="mb-0 mt-4">Nyein</h4>
                             <p class="mb-0">Main Chef</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="" alt="">
+                        <img src="./assets/images/team_03.png" alt="">
                         <div class="team-member-content">
-                            <h4 class="mb-0 mt-4">Min Thaw Khant</h4>
+                            <h4 class="mb-0 mt-4">Min Thaw</h4>
                             <p class="mb-0">Main Chef</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="" alt="">
-                        <div class="team-member-content">
-                            <h4 class="mb-0 mt-4">Min Thaw Khant</h4>
-                            <p class="mb-0">Main Chef</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="" alt="">
-                        <div class="team-member-content">
-                            <h4 class="mb-0 mt-4">Min Thaw Khant</h4>
-                            <p class="mb-0">Main Chef</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="" alt="">
-                        <div class="team-member-content">
-                            <h4 class="mb-0 mt-4">Min Thaw Khant</h4>
-                            <p class="mb-0">Main Chef</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="" alt="">
-                        <div class="team-member-content">
-                            <h4 class="mb-0 mt-4">Min Thaw Khant</h4>
-                            <p class="mb-0">Main Chef</p>
-                        </div>
-                    </div>
-                </div>
+   
             </div>
         </div>
     </section>
@@ -269,8 +229,7 @@
             <div class="row">
                 <div class="col-12 intro-text">
                     <h1>Book Your Table</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae sint temporibus natus optio
-                        eveniet nobis accusantium?</p>
+                    <p>You can book your table with the form down below.</p>
                 </div>
             </div>
             <form action="#" class="row justify-content-center">
@@ -308,9 +267,7 @@
             <div class="container">
                 <div class="row gy-5">
                     <div class="col-lg-4">
-                        <img src="./assets/images/Qrispy_white.svg" class="mb-4" alt="">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit architecto unde
-                            magnam.</p>
+                        <p>A small indian restaurant opened by 3 individual. Each helps to open the restuarent. We only sell top quality food with fresh ingredients and the recipe handcrafted by our amazing chefs.</p>
                         <div class="social-links">
                             <a href="#"><i class="ri-facebook-circle-fill"></i></a>
                             <a href="#"><i class="ri-instagram-fill"></i></a>
@@ -327,7 +284,7 @@
                     <div class="col-lg-3">
                         <h6 class="text-white mb-4">OPENING HOURS</h6>
                         <p class="mb-1">Monday-Friday : 08:00 - 6:00</p>
-                        <p>Saturday-Sunday : 08:00 - 5:00</p>
+                        <p>Saturday-Sunday : Close</p>
                     </div>
                 </div>
             </div>
