--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <!-- Remix Icons -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <!-- Style Css -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg bg-white shadow py-3 sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="logo.png" alt="">
+                <img src="images/logo.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,8 +56,7 @@
             <div class="row">
                 <div class="col-12 intro-text">
                     <h1>Contact Us</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae sint temporibus natus optio
-                        eveniet nobis accusantium?</p>
+                    <p>Stay in tuch with us by texting us with the form below.</p>
                 </div>
             </div>
             <form action="#" class="row justify-content-center">
@@ -92,9 +91,7 @@
             <div class="container">
                 <div class="row gy-5">
                     <div class="col-lg-4">
-                        <img src="./assets/images/Qrispy_white.svg" class="mb-4" alt="">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit architecto unde
-                            magnam.</p>
+                        <p>A small indian restaurant opened by 3 individual. Each helps to open the restuarent. We only sell top quality food with fresh ingredients and the recipe handcrafted by our amazing chefs.</p>
                         <div class="social-links">
                             <a href="#"><i class="ri-facebook-circle-fill"></i></a>
                             <a href="#"><i class="ri-instagram-fill"></i></a>
@@ -111,7 +108,7 @@
                     <div class="col-lg-3">
                         <h6 class="text-white mb-4">OPENING HOURS</h6>
                         <p class="mb-1">Monday-Friday : 08:00 - 6:00</p>
-                        <p>Saturday-Sunday : 08:00 - 5:00</p>
+                        <p>Saturday-Sunday : Close</p>
                     </div>
                 </div>
             </div>
